--- a/views/index.html
+++ b/views/index.html
@@ -1,63 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
+<link rel="stylesheet" type="text/css" href='./../public/css/style.css'>
 </head>
 <style>
-body {
-    
-  background-color: #ffff70;
-  max-width: 500px;
-  margin: auto;
-}
+
 </style>
-<body>
+<bo>
   <h1>The Philosophers Thermostat</h1>
+  <h1>The Ontelogical Temp is... </h1><span id="current-temp"></span>
+
 <div class="shadowbox" id="display">
-  <p> The Temperature is ... <span id="thermodisplay"></span></p>
+   The Relative Temperature is ...  <h1 id="thermodisplay"></h1></p>
 </div>
-<button id="increase">Increase</button>
-<button id="decrease" type="button">Decrease</button>
-<button id="reset" type="button">Reset</button>
-<br>
-<br>
-Power Saving Is Off?: <label class="switch">
+    <button id="increase">Increase</button>
+    <button id="decrease" type="button">Decrease</button>
+    <button id="reset" type="button">Reset</button>
+   <br>
+   <br>
+  Power Saving Is Off?: <label class="switch">
   <input type="checkbox">
   <span class="slider round" id='powersavingmode'></span>
  </label>
 <script>
-$(document).ready(function (){
-  
-  var thermostat = new Thermostat();
-
-  $("#thermodisplay").text(thermostat.temperature);
-
-  $("#increase").click(function() {
-    thermostat.increase()
-    $("#thermodisplay").text(thermostat.temperature);
-  });
-
-  $("#decrease").click(function() {
-    thermostat.decrease()
-    $("#thermodisplay").text(thermostat.temperature);
-  });
-
-  $("#reset").click(function() {
-    thermostat.reset()
-    $("#thermodisplay").text(thermostat.temperature);
-  });
-
-  $('*:checkbox').click(function() {
-    if ($(this).is(":checked")) {
-        thermostat.toggle();
-    } else if ($(this).is(":not(:checked")) {
-        thermostat.toggle();
-    }
-  });
-  
-});
 </script>
 <!--seperation of concerns -->
-<script src="./../public/thermostat.js" >
-</script>
+<script src="./../public/thermostat.js" ></script>
+<script src="./../interface.js" > </script>
 <body>
