--- a/views/index.html
+++ b/views/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href='./../public/css/style.css'>
 </head>
-<style>
 
-</style>
-<bo>
+  <audio src="./../shack.mp3" id="Shack">
+    <embed src="mysound1.mp3" hidden="true" loop="false" class="big shack">
+  </audio>
+
+  <audio src="./../hot.mp3" id="myAudio">
+    <embed src="mysound.mp3" hidden="true" loop="false" class="player_audio"/>
+  </audio>
+
   <h1>The Philosophers Thermostat</h1>
-  <h1>The Ontelogical Temp is... </h1><span id="current-temp"></span>
+  <h2>The Ontelogical Temp is: <span id="current-temp"></span>°C</h2>
 
 <div class="shadowbox" id="display">
-   The Relative Temperature is ...  <h1 id="thermodisplay"></h1></p>
+  <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
 </div>
-    <button id="increase">Increase</button>
-    <button id="decrease" type="button">Decrease</button>
-    <button id="reset" type="button">Reset</button>
+
    <br>
-   <br>
-  Power Saving Is Off?: <label class="switch">
-  <input type="checkbox">
-  <span class="slider round" id='powersavingmode'></span>
- </label>
-<script>
-</script>
+
+<center>
+  <button id="increase">Increase</button>
+  <button id="decrease" type="button">Decrease</button>
+  <button id="reset" type="button">Reset</button>
+</center>
+  <br>
+
+  <h4>Turn it up? <label class="switch"><input type="checkbox">
+  <span class="slider round" id='powersavingmode'></span>:</h4>
+  </label><div class="left-right">
+
+
+
+<div id="myDIV" style="display: none;">
+  <img src="image1.png">
+  <img src="./../nelly.jpg" width="450" height="250" alt="Nelly">
+</div>
+
 <!--seperation of concerns -->
 <script src="./../public/thermostat.js" ></script>
 <script src="./../interface.js" > </script>
-<body>
+
