--- a/views/index.html
+++ b/views/index.html
@@ -5,38 +5,38 @@
 <link rel="stylesheet" type="text/css" href='./../public/css/style.css'>
 </head>
 
-  <audio src="./../shack.mp3" id="Shack">
+  <!-- <audio src="./../shack.mp3" id="Shack">
     <embed src="mysound1.mp3" hidden="true" loop="false" class="big shack">
-  </audio>
+  </audio> -->
 
   <audio src="./../hot.mp3" id="myAudio">
     <embed src="mysound.mp3" hidden="true" loop="false" class="player_audio"/>
   </audio>
-
+  <div id="container">
+<div id="text">
   <h1>The Philosophers Thermostat</h1>
   <h2>The Ontelogical Temp is: <span id="current-temp"></span>°C</h2>
 
-<div class="shadowbox" id="display">
-  <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
-</div>
+  <div class="shadowbox" id="display">
+    <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
+  </div>
 
    <br>
 
-<center>
   <button id="increase">Increase</button>
   <button id="decrease" type="button">Decrease</button>
   <button id="reset" type="button">Reset</button>
-</center>
   <br>
 
   <h4>Turn it up? <label class="switch"><input type="checkbox">
-  <span class="slider round" id='powersavingmode'></span>:</h4>
+  <span class="slider-round" id='powersavingmode'></span>:</h4>
   </label><div class="left-right">
 
+</div>
+</div>
 
 
 <div id="myDIV" style="display: none;">
-  <img src="image1.png">
   <img src="./../nelly.jpg" width="450" height="250" alt="Nelly">
 </div>
 
