different city weather

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,14 @@
     <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
   </div>
 
+  <section>
+    <h1><span id="newcity"></span> <span id="current-temperature"></span></h1>
+    <form id="select-city">
+      <input id = "input-city" type="password" placeholder="enter a city"></input>
+      <input type="submit"></input>
+    </form>
+  </section>
+
    <br>
 
   <button id="increase">Increase</button>
