--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  /* text-align: right; */
 }
 
 
@@ -30,7 +30,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 #text {
-  text-align: center;
+  /* text-align: center; */
   margin: auto;
   width: 50%;
   float: right;
