first commit in new repo

--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href='./../public/css/style.css'>
 </head>
 
+
   <!-- <audio src="./../shack.mp3" id="Shack">
     <embed src="mysound1.mp3" hidden="true" loop="false" class="big shack">
   </audio> -->
@@ -45,6 +46,7 @@
 
 
 <div id="myDIV" style="display: none;">
+  <img src="./../farmer.jpg" width="450" height="250"> 
   <img src="./../nelly.jpg" width="450" height="250" alt="Nelly">
 </div>
 
