html cleaned up and song added

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href='./../public/css/style.css'>
 </head>
 
-
+<body>
   <!-- <audio src="./../shack.mp3" id="Shack">
     <embed src="mysound1.mp3" hidden="true" loop="false" class="big shack">
   </audio> -->
@@ -13,13 +13,15 @@
   <audio src="./../hot.mp3" id="myAudio">
     <embed src="mysound.mp3" hidden="true" loop="false" class="player_audio"/>
   </audio>
-<div id="container">
-  <div id="text">
-    <h1>The Thermostat</h1>
-    <h2>The Tempurature Outside:<span id="current-temp"></span>°C</h2>
+  <div id="container">
+    <div id="text">
+      <h1>The Thermostat</h1>
+      <h2>The Tempurature Outside:<span id="current-temp"></span>°C</h2>
 
-    <div class="shadowbox" id="display">
-      <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
+      <div class="shadowbox" id="display">
+        <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
+      </div>
+
     </div>
 
     <section>
@@ -35,13 +37,13 @@
     <button id="increase">Increase</button>
     <button id="decrease" type="button">Decrease</button>
     <button id="reset" type="button">Reset</button>
+  
     <br>
-
-    <h4>Turn it up? <label class="switch"><input type="checkbox">
-    <span class="slider-round" id='powersavingmode'></span>:</h4>
-    </label><div class="left-right">
-
-    </div>
+    <div id="power-save">
+      <h4>Turn it up? <label class="switch"><input type="checkbox">
+      <span class="slider-round" id='powersavingmode'></span>:</h4>
+      </label>
+    </div> 
   </div>
 
 
@@ -53,4 +55,5 @@
   <!--seperation of concerns -->
   <script src="./../public/thermostat.js" ></script>
   <script src="./../interface.js" > </script>
-
+  
+</body>
