current outside temperature displays on screen

--- a/views/index.html
+++ b/views/index.html
@@ -6,42 +6,39 @@
 </head>
 
 <body>
-  <!-- <audio src="./../shack.mp3" id="Shack">
-    <embed src="mysound1.mp3" hidden="true" loop="false" class="big shack">
-  </audio> -->
-
   <audio src="./../hot.mp3" id="myAudio">
     <embed src="mysound.mp3" hidden="true" loop="false" class="player_audio"/>
   </audio>
-  <div id="container">
+
+  <div class="container">
     <div id="text">
       <h1>The Thermostat</h1>
       <h2>The Tempurature Outside:<span id="current-temp"></span>°C</h2>
 
       <div class="shadowbox" id="display">
-        <h2> The Relative Temperature is :  <span id="thermodisplay"></span>°C</h2>
+        <h2> Current Tempurature is set to:<span id="thermodisplay"></span>°C</h2>
       </div>
 
     </div>
 
-    <section>
+    <div id="city-search">
       <h1><span id="newcity"></span> <span id="current-temperature"></span></h1>
       <form id="select-city">
-        <input id = "input-city" type="password" placeholder="enter a city"></input>
+        <input id = "input-city" type="text" placeholder="Search A City's Temp"></input>
         <input type="submit"></input>
       </form>
-    </section>
+   
+      <br>
 
-    <br>
+      <button id="increase">Increase</button>
+      <button id="decrease" type="button">Decrease</button>
+      <button id="reset" type="button">Reset</button>
+    </div>
 
-    <button id="increase">Increase</button>
-    <button id="decrease" type="button">Decrease</button>
-    <button id="reset" type="button">Reset</button>
-  
     <br>
     <div id="power-save">
       <h4>Turn it up? <label class="switch"><input type="checkbox">
-      <span class="slider-round" id='powersavingmode'></span>:</h4>
+      <span class="slider-round" id='powersavingmode'></span></h4>
       </label>
     </div> 
   </div>
@@ -55,5 +52,5 @@
   <!--seperation of concerns -->
   <script src="./../public/thermostat.js" ></script>
   <script src="./../interface.js" > </script>
-  
+
 </body>
