degree symbols added into the interface.js and taken out of html

--- a/views/index.html
+++ b/views/index.html
@@ -13,26 +13,27 @@
   <div class="container">
     <div id="text">
       <h1>The Thermostat</h1>
-      <h2>The Tempurature Outside:<span id="current-temp"></span>°C</h2>
+      <h2>The Tempurature Outside:<span id="current-temp"></span></h2>
 
       <div class="shadowbox" id="display">
-        <h2> Current Tempurature is set to:<span id="thermodisplay"></span>°C</h2>
+        <h2> Current Tempurature is set to:<span id="thermodisplay"></span></h2>
+        <div id="buttons">
+          <button id="increase">Increase</button>
+          <button id="decrease" type="button">Decrease</button>
+          <button id="reset" type="button">Reset</button>
+        </div>
       </div>
 
     </div>
 
     <div id="city-search">
-      <h1><span id="newcity"></span> <span id="current-temperature"></span></h1>
+      <h3><span id="newcity"></span> <span id="current-temperature"></span></h3>
       <form id="select-city">
         <input id = "input-city" type="text" placeholder="Search A City's Temp"></input>
         <input type="submit"></input>
       </form>
    
       <br>
-
-      <button id="increase">Increase</button>
-      <button id="decrease" type="button">Decrease</button>
-      <button id="reset" type="button">Reset</button>
     </div>
 
     <br>
