turn it up button changed to power saving button

--- a/views/index.html
+++ b/views/index.html
@@ -23,9 +23,12 @@
           <button id="reset" type="button">Reset</button>
         </div>
         <div id="power-save">
-          <h4>Turn it up? <label class="switch"><input type="checkbox">
-          <span class="slider-round" id='powersavingmode'></span></h4>
-          </label>
+          <h2>Power Saving Mode
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round" id='powersavingmode'></span>
+            </label>
+          </h2>  
         </div> 
       </div>
     </div>
