opening page complete

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,24 +12,43 @@ h1,h2,h3,h4,h5,h6 {
   font-family: "Comic Sans MS", cursive, sans-serif;
   color: rgb(000, 000, 000);
   max-width: 500px;
-  /* opacity: 0.9; */
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.shadowbox {
-  text-align: left;
-}
+
 
 #text {
   margin: auto;
   width: 50%;
+  margin: 0;
   float: right;
 }
 
 #power-save {
   text-align: center;
   float: center;
+}
+
+#outside-temp {
+  width: 40%;
+  margin: 0;
+  padding: 0;
+  float: left;
+  /* background-color: salmon; */
+}
+
+.shadowbox {
+  text-align: left;
+  float: right;
+  margin-right: 15%;
+  /* background-color: teal; */
+}
+
+#buttons {
+  text-align: right;
+  float: center;
+  margin-right: 25%;
 }
 
 .switch {
